# xyzSlicer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Python3/: CMakeLists.txt  package.xml  waam_slicer.py  waam_slicer_v1.py  waam_slicer_v2.py
src/: Slicer.cpp  Slicer.hpp
